Original config. test

--- a/record.ipynb
+++ b/record.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# NLP Adder\n",
+    "[Request and Target](https://drive.google.com/file/d/1Fm9ou_xQoQ9zCEuplPe8SLUaJNvDoX4G/view)\n",
     "## One-hot encoding\n",
     "Convert an integer into a length-10-array, that only one element of array is `1` and others are `0`.<br>\n",
     "For example, number `4` might be convert into an array that the fourth element is `1` while others are `0`.\n",
@@ -17,8 +18,33 @@
     "    * shape of output : (4,12)\n",
     "    \n",
     "## Build model\n",
+    "Building process includes\n",
+    "   * Declaration\n",
+    "   * Add layers\n",
+    "   * Compile\n",
+    "   \n",
+    "## Evaluation\n",
+    "After training, select 1000 (or more) questions from testing set to evaluate correctness.\n",
+    "### Origin\n",
+    "* 3-digit\n",
+    "* training epoch : 100\n",
+    "* training size : 18000\n",
+    "* execution time\n",
+    "    * adder : 513 sec\n",
+    "    * subtractor : 501 sec\n",
+    "    * combine : 509 sec\n",
+    "* Result\n",
+    "![](img/origin.png)\n",
+    "\n",
+    "\n",
+    "### Effect of training epoch\n",
+    "### Effect of training size\n",
+    "\n",
     "## Reference\n",
-    "* [Getting Started with Keras](https://www.youtube.com/watch?v=J6Ok8p463C4&t)"
+    "* [Keras documentation](https://keras.io/)\n",
+    "* [Getting Started with Keras](https://www.youtube.com/watch?v=J6Ok8p463C4&t)\n",
+    "* [TimeDistributed and RepeatVector](https://blog.csdn.net/ChaoFeiLi/article/details/89323078)\n",
+    "* [Build LSTM model](https://medium.com/@daniel820710/%E5%88%A9%E7%94%A8keras%E5%BB%BA%E6%A7%8Blstm%E6%A8%A1%E5%9E%8B-%E4%BB%A5stock-prediction-%E7%82%BA%E4%BE%8B-1-67456e0a0b) "
    ]
   },
   {
