Use multi-level function call to ease expansion

--- a/record.ipynb
+++ b/record.ipynb
@@ -29,6 +29,7 @@
     "* 3-digit\n",
     "* training epoch : 100\n",
     "* training size : 18000\n",
+    "* validate size : 2000\n",
     "* execution time\n",
     "    * adder : 513 sec\n",
     "    * subtractor : 501 sec\n",
@@ -38,7 +39,7 @@
     "\n",
     "\n",
     "### Effect of training epoch\n",
-    "### Effect of training size\n",
+    "### Effect of digits\n",
     "\n",
     "## Reference\n",
     "* [Keras documentation](https://keras.io/)\n",
