Analysis impact of digit number

--- a/record.ipynb
+++ b/record.ipynb
@@ -40,6 +40,12 @@
     "\n",
     "### Effect of training epoch\n",
     "### Effect of digits\n",
+    "* execution time\n",
+    "    * 3-digit : about 530 sec\n",
+    "    * 4-digit : about 620 sec\n",
+    "    * 5-digit : 740~840 sec\n",
+    "* 3-digit\n",
+    "![](img/digit.png)\n",
     "\n",
     "## Reference\n",
     "* [Keras documentation](https://keras.io/)\n",
