--- a/record.ipynb
+++ b/record.ipynb
@@ -39,12 +39,21 @@
     "\n",
     "\n",
     "### Effect of training epoch\n",
+    "* execution time\n",
+    "    * 100 epoches : 500~600 sec\n",
+    "    * 200 epoches : 1000~1100 sec\n",
+    "    * 300 epoches : 1500~1600 sec<br>\n",
+    "    **growing rate is approximately linear**\n",
+    "* Result\n",
+    "![](img/epoch.png)\n",
+    "It shows that there's a little improvement from 100 to 200 epoches, but there's nearly no difference between 200 and 300 epoches. \n",
+    "\n",
     "### Effect of digits\n",
     "* execution time\n",
     "    * 3-digit : about 530 sec\n",
     "    * 4-digit : about 620 sec\n",
     "    * 5-digit : 740~840 sec\n",
-    "* 3-digit\n",
+    "* Result\n",
     "![](img/digit.png)\n",
     "\n",
     "## Reference\n",
@@ -53,13 +62,6 @@
     "* [TimeDistributed and RepeatVector](https://blog.csdn.net/ChaoFeiLi/article/details/89323078)\n",
     "* [Build LSTM model](https://medium.com/@daniel820710/%E5%88%A9%E7%94%A8keras%E5%BB%BA%E6%A7%8Blstm%E6%A8%A1%E5%9E%8B-%E4%BB%A5stock-prediction-%E7%82%BA%E4%BE%8B-1-67456e0a0b) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
