--- a/record.ipynb
+++ b/record.ipynb
@@ -56,6 +56,12 @@
     "* Result\n",
     "![](img/digit.png)\n",
     "\n",
+    "## Multiplier\n",
+    "### 3-digit\n",
+    "* training epoches : 100~300 \n",
+    "* Result\n",
+    "![](img/digit_3_multi.png)\n",
+    "The result is quite weird (overtraining?) and correctness is very low.\n",
     "## Reference\n",
     "* [Keras documentation](https://keras.io/)\n",
     "* [Getting Started with Keras](https://www.youtube.com/watch?v=J6Ok8p463C4&t)\n",
